go, rust, bash, flutter, java, gradle, dart, python progress